--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-# Hexo Configuration
+﻿# Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-keywords:
-author: John Doe
-language:
-timezone:
+title: visionNoob's blog
+subtitle: Computer Vision Playground
+description: Take a gap year!
+keywords: computer vision, deep learning, image processing
+author: Jaewon_Lee
+language: english
+timezone: asia/seoul
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -30,7 +30,7 @@ skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
-default_layout: post
+default_layout: draft
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -73,11 +73,21 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: chan
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/visionNoob/visionNoob.github.io.git
+  repo: https://github.com/visionNoob/visionNoob.github.io
 branch: master
+
+sitemap:
+  path: sitemap.xml
+
+feed:
+  type: rss2
+  path: feed.xml
+  limit: false
+  hub: 
+
